--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
 /.vscode
 /__pycache__
 backend/instance/site.db
-backend/zoo/__pycache__/__init__.cpython-311.pyc
-backend/zoo/__pycache__/models.cpython-311.pyc
-backend/zoo/API/__pycache__/API.cpython-311.pyc
-backend/zoo/API/__pycache__/MovieAPI.cpython-311.pyc
-backend/zoo/API/__pycache__/schemas.cpython-311.pyc
-backend/zoo/API/__pycache__/ShowAPI.cpython-311.pyc
-backend/zoo/API/__pycache__/UserAPI.cpython-311.pyc
-backend/zoo/API/__pycache__/VenueAPI.cpython-311.pyc
-backend/zoo/static/posters/Saamy 1.jpg
-
-backend/zoo/API/__pycache__/BookingAPI.cpython-311.pyc
-backend/zoo/API/__pycache__/MovieAPI.cpython-311.pyc
-backend/zoo/API/__pycache__/schemas.cpython-311.pyc
-backend/zoo/__pycache__/__init__.cpython-311.pyc
+backend/zoo/__pycache__/*
+backend/zoo/API/__pycache__/*
+backend/__pycache__/*
+backend/zoo/static/posters
