--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,8 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+contourpy==1.1.1
+cycler==0.11.0
 dnspython==2.4.1
 email-validator==2.0.0.post2
 Flask==2.3.2
@@ -27,18 +29,24 @@ Flask-RESTful==0.3.10
 Flask-Security-Too==5.3.0
 Flask-SQLAlchemy==3.0.5
 Flask-WTF==1.1.1
+fonttools==4.42.1
 greenlet==2.0.2
 idna==3.4
 importlib-resources==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+kiwisolver==1.4.5
 kombu==5.3.2
 MarkupSafe==2.1.3
 marshmallow==3.20.1
+matplotlib==3.8.0
 mkdocs-material-extensions==1.1.1
+numpy==1.26.0
 packaging==23.1
 passlib==1.7.4
+Pillow==10.0.1
 prompt-toolkit==3.0.39
+pyparsing==3.1.1
 python-dateutil==2.8.2
 pytz==2023.3
 redis==4.6.0
